# cuda-quantum

Equal1/benchmarking/: benchmark.py  config.yml  generated.mlir  phase_estimation.py  test.ipynb  visualization.ipynb
Equal1/bugs/: main.py  wrong_count.mlir  wrong_count_bell.mlir  wrong_count_bell_all_mapping.mlir  wrong_count_bell_no_measurement_mapping.mlir  wrong_count_different_registers.mlir
include/cudaq/Optimizer/CodeGen/: Peephole.td  QIRFunctionNames.h
include/cudaq/Optimizer/Transforms/: Passes.td
lib/Optimizer/CodeGen/: ConvertToQIRProfile.cpp
lib/Optimizer/Transforms/: BasisConversion.cpp  CMakeLists.txt  DecompositionPatterns.cpp  Mapping.cpp  MeasurementMapping.cpp
python/cudaq/: __init__.py
python/cudaq/runtime/: compile.py
python/runtime/common/: py_ExecutionContext.cpp  py_NoiseModel.cpp
python/runtime/utils/: PyRemoteRESTQPU.cpp
python/tests/builder/: test_NoiseModel.py
runtime/common/: BaseRemoteRESTQPU.h  ExecutionContext.h  NoiseModel.h  RuntimeMLIR.cpp  RuntimeMLIRCommonImpl.h
runtime/cudaq/platform/default/rest/helpers/: CMakeLists.txt
runtime/cudaq/platform/default/rest/helpers/equal1/: CMakeLists.txt  Equal1ServerHelper.cpp  equal1.yml
runtime/nvqir/: CircuitSimulator.h
test/Transforms/: measurement_mapping.qke
test/Transforms/DecompositionPatterns/: HToRyZ.qke
utils/mock_qpu/equal1/: __init__.py
